--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "gh-pages": "^3.2.3",
+    "material-design-icons": "^3.0.1",
     "modern-normalize": "^1.1.0",
     "nanoid": "^3.1.30",
     "node-sass": "^6.0.1",
+    "pnotify": "^5.2.0",
     "react": "^17.0.2",
+    "react-content-loader": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
